# dragon-claw

./: .gitignore  LICENSE  README.md  build-installer.bat  build-installer.ps1  installer.wxs
.github/workflows/: ci.yml  tag.yml
agent/: Cargo.toml  installer.wxs
agent/src/: error.rs  main.rs
agent/src/net/discovery/: mod.rs
agent/src/net/discovery/linux/: mod.rs
agent/src/pal/: discovery.rs  mod.rs  power.rs  status.rs
agent/src/pal/linux/: avahi.rs  discovery.rs  login1.rs  mod.rs  power.rs  status.rs
agent/src/pal/linux/dbus/: avahi.rs  login1.rs  mod.rs
agent/src/pal/windows/: discovery.rs  dns.rs  mod.rs  name.rs  power.rs  process.rs  status.rs  util.rs
agent/src/pal/windows/service/: dispatcher.rs  mod.rs
agent/src/proto/: mod.rs  power.rs
agent/src/ssdp/: mod.rs
app/: .metadata  gen-protobufs.sh  pubspec.yaml
app/android/: .gitignore  build.gradle  settings.gradle
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/net/janrupf/app/: MainActivity.kt
app/android/app/src/main/kotlin/net/janrupf/dragon_claw/: MainActivity.kt
app/android/buildSrc/: build.gradle
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/: DragonClawGradlePlugin.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/extension/: DragonClawIconExtension.java  DragonClawIconImport.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/generator/: IconFileGenerator.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/generator/android/: AndroidIconFileGenerator.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/meta/: IconMeta.java  IconTarget.java  IconTargetOptions.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/meta/android/: AndroidIconTargetOptions.java
app/android/buildSrc/src/main/java/net/janrupf/dragonclaw/gradle/task/: DragonClawIconImportTask.java  IconImportTaskCreator.java
app/lib/: main.dart  routing.dart
app/lib/client/: agent.dart  agent_client.dart  agent_store.dart
app/lib/components/: action.dart  add_device_dialog.dart  device_list.dart  discovery_list.dart
app/lib/components/control/: power_action_sheet.dart
app/lib/discovery/: agent.dart  discovery.dart  ssdp.dart
app/lib/routes/: control.dart  home.dart
app/lib/updater/: updater.dart
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
assets/icon/: icon-meta.json
proto/: service.proto
