[package]
name = "dragon-claw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.29.1", features = ["rt", "fs", "net", "macros", "io-util", "time"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Networking

# Error handling
thiserror = "1.0.44"

[target.'cfg(target_os = "linux")'.dependencies]
# DBUS
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
