[package]
name = "dragon-claw-agent"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
# Async
tokio = { version = "1.29.1", features = ["rt", "fs", "net", "macros", "io-util", "time", "signal"] }
futures-util = "0.3.28"
async-trait = "0.1.72"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"

# Networking/RPC
tonic = "0.9.2"
prost = "0.11.9"

# Error handling
thiserror = "1.0.44"

[target.'cfg(unix)'.dependencies]
# Utility/Pal
libc = "0.2.147"

[target.'cfg(target_os = "linux")'.dependencies]
# DBUS
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_NetworkManagement_Dns"
]

[build-dependencies]
tonic-build = "0.9.2"
cargo-emit = "0.2.1"
thiserror = "1.0.44"

serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"

resvg = "0.35.0"
png = "0.17.9"

ico = "0.3.0"
winres = "0.1.12"
